--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.js linguist-language=JavaScript
 *.jsx linguist-language=JavaScript
 *.css linguist-language=CSS
+/static/js/* linguist-language=JavaScript
+/static/css/* linguist-language=CSS
