--- a/package.json
+++ b/package.json
@@ -16,12 +16,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf docs && mv build docs",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "minify": "uglifyjs src/App.js -o src/App.min.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -41,9 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "uglify-js": "^3.17.4"
-  },
-  "homepage": "http://lucascorreiaan.github.io/base64-to-pdf"
+  "homepage": "https://lucascorreiaan.github.io/base64-to-pdf"
 }
